<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="company.petron.imei.MainActivity_imei"
    tools:showIn="@layout/activity_main_activity_imei">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:id="@+id/t_imei"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_imie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/imei"
                android:textColor="#005500"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtreimei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text=""
                android:textColor="#005500"
                android:textSize="20sp" />


        </TableRow>

        <TableRow
            android:id="@+id/t_nombreop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_nombre_operador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/nombre_operador"
                android:textColor="#005500"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtrenombreop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text=""
                android:textColor="#005500"
                android:textSize="20sp" />


        </TableRow>

        <TableRow
            android:id="@+id/t_numop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_numero_operador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/numero_operador"
                android:textColor="#005500"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtrenumop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text=""
                android:textColor="#005500"
                android:textSize="20sp" />


        </TableRow>

        <TableRow
            android:id="@+id/t_vsv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_vsv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/version_sof"
                android:textColor="#005500"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtrevsv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text=""
                android:textColor="#005500"
                android:textSize="20sp" />


        </TableRow>

        <TableRow
            android:id="@+id/t_snsim"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_snsim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/numero_serie_sim"
                android:textColor="#005500"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtresnsim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text=""
                android:textColor="#005500"
                android:textSize="20sp" />


        </TableRow>

        <TableRow
            android:id="@+id/t_pais"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_pais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/codigo_pais"
                android:textColor="#005500"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtrepais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text=""
                android:textColor="#005500"
                android:textSize="20sp" />


        </TableRow>

        <TableRow
            android:id="@+id/t_id_abonado"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_id_abonado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/numero_operador"
                android:textColor="#005500"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtreidabonado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text=""
                android:textColor="#005500"
                android:textSize="20sp" />




        </TableRow>
        <LinearLayout
            android:id="@+id/t_id_ayuda"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">



            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/txtmensaje"
                android:textColor="#40e438" />


        </LinearLayout>

    </TableLayout>
    <com.startapp.android.publish.banner.Banner
        android:id="@+id/startAppBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
